...

  GameInfoScreen({
    Key? key,
    required this.text,
    required this.urlImage,
    required this.selectedMode,
  }) : super(key: const Key("GameInfoPage"));

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: utilities.secondaryColor,
      floatingActionButtonLocation: FloatingActionButtonLocation.centerFloat,
...
