...
class PlayButton extends StatefulWidget {
  String selectedMode;

  PlayButton({
    required this.selectedMode,
    Key? key,
  }) : super(key: const Key("PlayButtonInfoPage"));

  @override
  State<PlayButton> createState() => _PlayButtonState();
}

class _PlayButtonState extends State<PlayButton> {
...
